--- a/timeline/style.css
+++ b/timeline/style.css
@@ -1,126 +1,124 @@
 @import url(https://fonts.googleapis.com/css?family=Lato:400,900);
-
-$dark:#000;
-
-//======= breakpoints
-$tablet:40rem;
-
-@mixin tablet {
-  @media (max-width: #{$tablet}) {
-    @content;
-  }
-}
-
-
-//======= reset
 *, *:before, *:after {
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
-//======= global
 html, body {
-  width:100%;
-  height:100%;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   font-family: 'Lato', sans-serif;
-  line-height:160%;
-  font-size:100%;
-  color:lighten($dark, 30%);
+  line-height: 160%;
+  font-size: 100%;
+  color: #4d4d4d;
 }
 
 .group:after {
-  content:"";
-  display:table;
-  clear:both;
+  content: "";
+  display: table;
+  clear: both;
 }
 
 .fullwidth {
-  width:100%;
-  padding-top:4rem;
-  background-color:lighten($dark, 90%);
+  width: 100%;
+  padding-top: 4rem;
+  background-color: #e6e6e6;
 }
 
-
-//======= timeline for centering
 .timeline {
-  width:100%;
-  max-width:60rem;
-  margin-right:auto;
-  margin-left:auto;
-  padding-right:2rem;
-  padding-bottom:4rem;
-  padding-left:2rem;
-  background-image:linear-gradient(lighten($dark, 60%), lighten($dark, 60%));
-  background-size:2px 100%;
-  background-position:50% 1rem;
-  background-repeat:no-repeat;
-
-  @include tablet {background-position:2rem 0;}
+  width: 100%;
+  max-width: 60rem;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 2rem;
+  padding-bottom: 4rem;
+  padding-left: 2rem;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#999999), to(#999999));
+  background-image: linear-gradient(#999999, #999999);
+  background-size: 2px 100%;
+  background-position: 50% 1rem;
+  background-repeat: no-repeat;
+}
+@media (max-width: 40rem) {
+  .timeline {
+    background-position: 2rem 0;
+  }
 }
 
-
-// every single month
 .timeline .item {
-  position:relative;
-  display:block;
-  width:50%;
-  float:left;
-  clear:both;
-  margin-top:-1rem;
-
-  @include tablet {
-    width:100%;
-    float:none;
-    margin-top:0;
-    margin-bottom:3rem;
+  position: relative;
+  display: block;
+  width: 50%;
+  float: left;
+  clear: both;
+  margin-top: -1rem;
+}
+@media (max-width: 40rem) {
+  .timeline .item {
+    width: 100%;
+    float: none;
+    margin-top: 0;
+    margin-bottom: 3rem;
   }
-
-  // the circle on the timeline
-  &:before {
-    content:'';
-    position:absolute;
-    top:0.3rem;
-    width:1rem;
-    height:1rem;
-    border:2px solid lighten($dark, 60%);
-    border-radius:50%;
-    background-color:lighten($dark, 90%);
-  }
-  // change background-color when hovered
-  &:hover:before {background-color:lighten($dark, 60%);}
+}
+.timeline .item:before {
+  content: '';
+  position: absolute;
+  top: 0.3rem;
+  width: 1rem;
+  height: 1rem;
+  border: 2px solid #999999;
+  border-radius: 50%;
+  background-color: #e6e6e6;
+}
+.timeline .item:hover:before {
+  background-color: #999999;
 }
 
-// the first month should not be lifted up
-.timeline .item:first-child {margin-top:0;}
+.timeline .item:first-child {
+  margin-top: 0;
+}
 
-// every "odd" moth will be floated to the right
 .timeline .item:nth-child(odd) {
-  float:right;
-  padding-left:2rem;
-  &:before {left:-0.5rem;}
+  float: right;
+  padding-left: 2rem;
+}
+.timeline .item:nth-child(odd):before {
+  left: -0.5rem;
 }
 
 .timeline .item:nth-child(even) {
-  padding-right:2rem;
-  @include tablet {padding-right:0;padding-left:2rem;}
-
-  &:before {
-    right:-0.5rem;
-    @include tablet {left:-0.5rem;}
+  padding-right: 2rem;
+}
+@media (max-width: 40rem) {
+  .timeline .item:nth-child(even) {
+    padding-right: 0;
+    padding-left: 2rem;
+  }
+}
+.timeline .item:nth-child(even):before {
+  right: -0.5rem;
+}
+@media (max-width: 40rem) {
+  .timeline .item:nth-child(even):before {
+    left: -0.5rem;
   }
 }
 
 .timeline .item h2 {
-  display:block;
-  margin-bottom:1rem;
+  display: block;
+  margin-bottom: 1rem;
 }
 
 .timeline .item:nth-child(even) h2 {
-  text-align:right;
-  @include tablet {text-align:left;}
+  text-align: right;
+}
+@media (max-width: 40rem) {
+  .timeline .item:nth-child(even) h2 {
+    text-align: left;
+  }
 }
