--- a/timeline/style.css
+++ b/timeline/style.css
@@ -14,7 +14,7 @@ body {
   font-family: 'Lato', sans-serif;
   line-height: 160%;
   font-size: 100%;
-  color: #4d4d4d;
+  color: #fe5c88;
 }
 
 .group:after {
