--- a/timeline/style.css
+++ b/timeline/style.css
@@ -1,124 +1,207 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:400,900);
-*, *:before, *:after {
+@charset "UTF-8";
+@import url(https://fonts.googleapis.com/css?family=Fira+Sans:200,400,500);
+* {
+  border: 0;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
-html, body {
-  width: 100%;
+html {
   height: 100%;
 }
 
 body {
-  font-family: 'Lato', sans-serif;
-  line-height: 160%;
-  font-size: 100%;
-  color: #4d4d4d;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Fira Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #79838c;
 }
 
-.group:after {
-  content: "";
-  display: table;
-  clear: both;
+a {
+  color: #50585f;
+  text-decoration: none;
+}
+a:hover {
+  color: #383e44;
 }
 
-.fullwidth {
-  width: 100%;
-  padding-top: 4rem;
-  background-color: #000000;
+div.container {
+  display: flex;
+  flex: auto;
+  flex-direction: column;
+  max-height: 100%;
 }
 
-.timeline {
-  width: 100%;
-  max-width: 60rem;
-  margin-right: auto;
-  margin-left: auto;
-  padding-right: 2rem;
-  padding-bottom: 4rem;
-  padding-left: 2rem;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#fe5c88), to(#fe5c88));
-  background-image: linear-gradient(#fe5c88, #fe5c88);
-  background-size: 2px 100%;
-  background-position: 50% 1rem;
-  background-repeat: no-repeat;
-}
-@media (max-width: 40rem) {
-  .timeline {
-    background-position: 2rem 0;
-  }
-}
-
-.timeline .item {
+div.header {
+  height: auto;
+  text-align: center;
+  background: slategrey;
+  color: ghostwhite;
+  padding: 2.3rem 1rem 2.3rem 1rem;
   position: relative;
-  display: block;
-  width: 50%;
-  float: left;
-  clear: both;
-  margin-top: -1rem;
 }
-@media (max-width: 40rem) {
-  .timeline .item {
-    width: 100%;
-    float: none;
-    margin-top: 0;
-    margin-bottom: 3rem;
-  }
-}
-.timeline .item:before {
+div.header:after {
   content: '';
   position: absolute;
-  top: 0.3rem;
-  width: 1rem;
-  height: 1rem;
-  border: 2px solid #fe5c88;
-  border-radius: 50%;
-  background-color: white;
-}
-.timeline .item:hover:before {
-  background-color: #fe5c88;
-}
-
-.timeline .item:first-child {
-  margin-top: 0;
-}
-
-.timeline .item:nth-child(odd) {
-  float: right;
-  padding-left: 2rem;
-}
-.timeline .item:nth-child(odd):before {
-  left: -0.5rem;
-}
-
-.timeline .item:nth-child(even) {
-  padding-right: 2rem;
-}
-@media (max-width: 40rem) {
-  .timeline .item:nth-child(even) {
-    padding-right: 0;
-    padding-left: 2rem;
-  }
-}
-.timeline .item:nth-child(even):before {
-  right: -0.5rem;
-}
-@media (max-width: 40rem) {
-  .timeline .item:nth-child(even):before {
-    left: -0.5rem;
-  }
-}
-
-.timeline .item h2 {
+  bottom: -5rem;
+  left: 0rem;
+  height: 5.1rem;
   display: block;
-  margin-bottom: 1rem;
+  width: 100%;
+  z-index: 300;
+  background: -moz-linear-gradient(top, white 20%, rgba(255, 255, 255, 0) 100%);
+  /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, white 20%, rgba(255, 255, 255, 0) 100%);
+  /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, white 20%, rgba(255, 255, 255, 0) 100%);
+  /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+  /* IE6-9 */
+}
+div.header h1 {
+  margin-top: .8rem;
+  margin-bottom: .5rem;
+  font-weight: 200;
+  font-size: 1.6em;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+@media (min-width: 62em) {
+  div.header h1 {
+    font-size: 1.9em;
+    letter-spacing: 0.2rem;
+  }
+}
+div.header h2 {
+  font-size: 1.1em;
+  font-weight: 400;
+  color: #cfd7de;
+  max-width: 30rem;
+  margin: auto;
 }
 
-.timeline .item:nth-child(even) h2 {
-  text-align: right;
+div.item {
+  display: flex;
+  flex: auto;
+  overflow-y: auto;
+  padding: 0rem 1rem 0rem 1rem;
 }
-@media (max-width: 40rem) {
-  .timeline .item:nth-child(even) h2 {
-    text-align: left;
+
+#timeline {
+  position: relative;
+  display: table;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 5rem;
+}
+#timeline div:after {
+  content: '';
+  width: 2px;
+  position: absolute;
+  top: .5rem;
+  bottom: 0rem;
+  left: 60px;
+  z-index: 1;
+  background: #C5C5C5;
+}
+#timeline h3 {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 5rem;
+  color: #888;
+  margin: 0;
+  font-size: 1em;
+  font-weight: 400;
+}
+@media (min-width: 62em) {
+  #timeline h3 {
+    font-size: 1.1em;
   }
+}
+#timeline section.year {
+  position: relative;
+}
+#timeline section.year:first-child section {
+  margin-top: -1.3em;
+  padding-bottom: 0px;
+}
+#timeline section.year section {
+  position: relative;
+  padding-bottom: 1.25em;
+  margin-bottom: 2.2em;
+}
+#timeline section.year section h4 {
+  position: absolute;
+  bottom: 0;
+  font-size: .9em;
+  font-weight: 400;
+  line-height: 1.2em;
+  margin: 0;
+  padding: 0 0 0 89px;
+  color: #C5C5C5;
+}
+@media (min-width: 62em) {
+  #timeline section.year section h4 {
+    font-size: 1em;
+  }
+}
+#timeline section.year section ul {
+  list-style-type: none;
+  padding: 0 0 0 75px;
+  margin: -1.35rem 0 1em;
+  max-width: 32rem;
+  font-size: 1em;
+}
+@media (min-width: 62em) {
+  #timeline section.year section ul {
+    font-size: 1.1em;
+    padding: 0 0 0 81px;
+  }
+}
+#timeline section.year section ul:last-child {
+  margin-bottom: 0;
+}
+#timeline section.year section ul:first-of-type:after {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background: #C5C5C5;
+  border: 2px solid #FFFFFF;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  border-radius: 50%;
+  position: absolute;
+  left: 54px;
+  top: 3px;
+  z-index: 2;
+}
+#timeline section.year section ul li {
+  margin-left: .5rem;
+}
+#timeline section.year section ul li:before {
+  content: '·';
+  margin-left: -.5rem;
+  padding-right: .3rem;
+}
+#timeline section.year section ul li:not(:first-child) {
+  margin-top: .5rem;
+}
+#timeline section.year section ul li span.price {
+  color: mediumturquoise;
+  font-weight: 500;
+}
+
+#price {
+  display: inline;
+}
+
+svg {
+  border: 3px solid white;
+  border-radius: 50%;
+  box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
