--- a/timeline/style.css
+++ b/timeline/style.css
@@ -38,7 +38,7 @@ div.container {
 div.header {
   height: auto;
   text-align: center;
-  background: slategrey;
+  background: #57C2E5;
   color: ghostwhite;
   padding: 2.3rem 1rem 2.3rem 1rem;
   position: relative;
