--- a/timeline/style.css
+++ b/timeline/style.css
@@ -62,9 +62,10 @@ div.header:after {
   /* IE6-9 */
 }
 div.header h1 {
+  font-family: Helvetica
   margin-top: .8rem;
   margin-bottom: .5rem;
-  font-weight: 200;
+  font-weight: 800;
   font-size: 1.6em;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
