--- a/css/sitemap.css
+++ b/css/sitemap.css
@@ -1,12 +1,16 @@
 @charset "UTF-8";
 body {
-  color: black;
-  background: #ccc;
-  margin: auto;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Fira Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #5b636b;
 }
 
 div, ul, li, h3, h1, p {
-  font-family: "Roboto Mono", monospace;
+  font-family: "Fire Sans", sans-serif;
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
