Updated nav home

--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -45,18 +45,18 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
+              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
               <a href="../index.html">Home/家</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
+            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
                 href="../project/index.html">Project/参照</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
                 href="../newsroom/index.html">News/便り</a></li>
             <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../about/index.html">About/約画</a></li>
+                href="../about/index.html">About/約</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -95,22 +95,18 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
+              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
               <a href="../index.html">Home/家</a></li>
-            <li id="menu-item-702"
-              class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
+            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
                 href="../project/index.html">Project/参照</a></li>
-            <li id="menu-item-523"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
-            <li id="menu-item-524"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
                 href="../newsroom/index.html">News/便り</a></li>
-            <li id="menu-item-525"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../about/index.html">About/約画</a></li>
+            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+                href="../about/index.html">About/約</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -128,22 +124,20 @@
   <h3 class="screen-reader-text">Sliding Sidebar</h3>
     <div class="info_sidebar">
 
-      <div class="top_header_items_holder mobile_menu_opened">
-        <div class="main_menu">
-          <ul id="mobile-menu" class="navbar">
-            <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
-              <a href="index.html">Home/家</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
-                href="project/index.html">Project/参照</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="files/index.html">Files/資料</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                href="newsroom/index.html">News/便り</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="about/index.html">About/約</a></li>
-          </ul>
-        </div>
+      <div class="main_menu">
+        <ul id="top-menu" class="navbar">
+          <li id="menu-item-585"
+            class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
+            <a href="../index.html">Home/家</a></li>
+          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
+              href="../project/index.html">Project/参照</a></li>
+          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+              href="../files/index.html">Files/資料</a></li>
+          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+              href="../newsroom/index.html">News/便り</a></li>
+          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+              href="../about/index.html">About/約</a></li>
+        </ul>
       </div> <!-- end .top_header_items_holder -->
 
     </div>
