--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -35,7 +35,7 @@
 
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
-              <i class="fa fa-bars"></i>
+              <i class="fa fa-bars"></i><style> {margin-top: 10px;} </style>
             </a>
           </div>
 
