Updated widths in style.css

--- a/theme/style.css
+++ b/theme/style.css
@@ -156,7 +156,6 @@ figure {
 }
 
 .container {
-  width: 880px;
   margin-right: auto;
   margin-left: auto;
 }
@@ -1157,7 +1156,7 @@ body.header_logo_rounded .header_square_logo img {
   border-bottom: 1px solid #eee;
 }
 
-.header_nav.container {
+.header_nav {
   width: 880px;
 }
 
@@ -6207,7 +6206,7 @@ start responsive design
 }
 
 @media screen and (max-width: 910px) {
-  .header_nav.container {
+  .header_nav {
     width: initial;
     max-width: 880px;
   }
