--- a/partials/nav.css
+++ b/partials/nav.css
@@ -153,6 +153,8 @@ ul.navbar > li.menu-item > a {
 
 .header_nav {
   width: 880px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .header_nav .text_logo {
