--- a/theme/style.css
+++ b/theme/style.css
@@ -155,7 +155,7 @@ figure {
   font-weight: 300;
 }
 
-.container {
+.navtainer {
   width: 880px;
   margin-right: auto;
   margin-left: auto;
@@ -315,8 +315,8 @@ figure {
 
 .clearfix:before,
 .clearfix:after,
-.container:before,
-.container:after,
+.navtainer:before,
+.navtainer:after,
 .container-fluid:before,
 .container-fluid:after,
 .row:before,
@@ -327,7 +327,7 @@ figure {
 }
 
 .clearfix:after,
-.container:after,
+.navtainer:after,
 .container-fluid:after,
 .row:after
 {
@@ -1157,7 +1157,7 @@ body.header_logo_rounded .header_square_logo img {
   border-bottom: 1px solid #eee;
 }
 
-.header_nav.container {
+.header_nav.navtainer {
   width: 880px;
 }
 
@@ -6207,7 +6207,7 @@ start responsive design
 }
 
 @media screen and (max-width: 910px) {
-  .header_nav.container {
+  .header_nav.navtainer {
     width: initial;
     max-width: 880px;
   }
@@ -6230,7 +6230,7 @@ start responsive design
     margin-right: -15px;
   }
 
-  .container {
+  .navtainer {
     width: 100%;
     margin-right: auto;
     margin-left: auto;
