Updated wiki nav

--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -20,7 +20,7 @@
 <!-- header -->
 
 <header class="site_header">
-  <div class="sticky_header_nav_wrapper header_nav_wrapper ">
+  <div class="header_nav_wrapper unsticky_header_nav_wrapper">
     <div class="header_nav">
       <div class="container">
         <div class="site_branding">
