--- a/theme/style.css
+++ b/theme/style.css
@@ -1150,7 +1150,7 @@ body.header_logo_rounded .header_square_logo img {
   padding-top: 8px;
   padding-bottom: 10px;
   background-color: #F5F8F7;
-  position: relative;
+  position: fixed;
 }
 
 .header_nav_wrapper {
