Updated sticky nav display

--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -20,7 +20,7 @@
 <!-- header -->
 
 <header class="site_header">
-  <div class="sticky_header_nav_wrapper header_nav_wrapper">
+  <div class="sticky_header_nav_wrapper header_nav_wrapper header_is_stick">
     <div class="header_nav">
 
       <div class="container">
