Updated sticky nav position, display, z-index

--- a/theme/style.css
+++ b/theme/style.css
@@ -1400,7 +1400,9 @@ start sticky header
 .hidden_sticky_helper,
 .sticky_header_nav_wrapper,
 body.header_is_stick .header_nav_wrapper {
-  display: inline-block;
+  position: fixed;
+  width: 100;
+  z-index: 99;
 }
 
 body.header_is_stick .hidden_sticky_helper,
