--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -25,7 +25,7 @@
 
       <div class="container">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="../index.html" rel="home">STUDIO MILLMINT <img src='../images/flower.png'
+          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='../../images/flower.png'
                 height='25' width='25' />
             </a></h1>
         </div>
