--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -37,7 +37,7 @@
 
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
-              <i class="fas fa-bars header_control_icon"></i>
+              <i class="fa fa-bars header_control_icon"></i>
             </a>
           </div>
 
