Resolved conflicting .containers

--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
-    <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -23,7 +22,7 @@
   <div class="sticky_header_nav_wrapper header_nav_wrapper header_is_stick">
     <div class="header_nav">
 
-      <div class="container">
+      <div class="navcontainer">
         <div class="site_branding">
           <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='../../images/flower.png'
                 height='25' width='25' />
