--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -22,7 +22,7 @@
 <header class="site_header">
   <div class="header_nav_wrapper unsticky_header_nav_wrapper">
     <div class="header_nav">
-      <div class="container">
+      <div class="navcontainer">
         <div class="site_branding">
           <h1 class="text_logo">
             <a href="../index.html" rel="home">STUDIO MILLMINT
@@ -71,7 +71,7 @@
   <div class="sticky_header_nav_wrapper header_nav_wrapper">
     <div class="header_nav">
 
-      <div class="container">
+      <div class="navcontainer">
         <div class="site_branding">
           <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='images/flower.png'
                 height='25' width='25' />
