--- a/partials/nav-wiki.html
+++ b/partials/nav-wiki.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' id='style-css'  href='../../../../theme/style.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='fonts-css'  href='../../../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='custom-css'  href='../../../../theme/assets/css/custom.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='style-css'  href='../../../../../theme/style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='fonts-css'  href='../../../../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='custom-css'  href='../../../../../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -24,7 +24,7 @@
 
       <div class="navcontainer">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="../../../../index.html" rel="home">STUDIO MILLMINT <img src='../../../../images/flower.png'
+          <h1 class="text_logo"><a href="../../../../../index.html" rel="home">STUDIO MILLMINT <img src='../../../../../images/flower.png'
                 height='25' width='25' />
             </a></h1>
         </div>
@@ -47,19 +47,19 @@
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../../../../index.html">Home/家</a></li>
+              <a href="../../../../../index.html">Home/家</a></li>
             <li id="menu-item-702"
               class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
-                href="../../../../project/index.html">Project/参照</a></li>
+                href="../../../../../project/index.html">Project/参照</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
             <li id="menu-item-524"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                href="../../../../newsroom/index.html">News/便り</a></li>
+                href="../../../../../newsroom/index.html">News/便り</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../../../about/index.html">About/約画</a></li>
+                href="../../../../../about/index.html">About/約画</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
@@ -84,19 +84,19 @@
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../../../../index.html">Home/家</a></li>
+              <a href="../../../../../index.html">Home/家</a></li>
             <li id="menu-item-702"
               class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
-                href="../../../../project/index.html">Project/参照</a></li>
+                href="../../../../../project/index.html">Project/参照</a></li>
             <li id="menu-item-523"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../../../../files/index.html">Files/資料</a></li>
+                href="../../../../../files/index.html">Files/資料</a></li>
             <li id="menu-item-524"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                href="../../../../newsroom/index.html">News|便り</a></li>
+                href="../../../../../newsroom/index.html">News|便り</a></li>
             <li id="menu-item-525"
               class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../../../about/index.html">About/約画</a></li>
+                href="../../../../../about/index.html">About/約画</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
@@ -106,8 +106,8 @@
   </div>
 </div>
 
-      <script type='text/javascript' src='../../../../theme/assets/js/global.js'></script>
-      <script type='text/javascript' src='../../../../theme/plugins/inc/core.js'></script>
+      <script type='text/javascript' src='../../../../../theme/assets/js/global.js'></script>
+      <script type='text/javascript' src='../../../../../theme/plugins/inc/core.js'></script>
 
 </body>
 </html>
