--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -47,13 +47,13 @@
             <li id="menu-item-585"
               class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
               <a href="../index.html">Home/家</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
+            <li class="menu-item menu-item-702 default_menu"><a
                 href="../project/index.html">Project/参照</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+            <li class="menu-item menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+            <li class="menu-item menu-item-524 default_menu"><a
                 href="../newsroom/index.html">News/便り</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+            <li class="menu-item menu-item-525 default_menu"><a
                 href="../about/index.html">About/約</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
@@ -95,15 +95,15 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
+              class="menu-item current-menu-item menu-item-585 default_menu active">
               <a href="../index.html">Home/家</a></li>
-            <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
+            <li class="menu-item menu-item-702 default_menu"><a
                 href="../project/index.html">Project/参照</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+            <li class="menu-item menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+            <li class="menu-item menu-item-524 default_menu"><a
                 href="../newsroom/index.html">News/便り</a></li>
-            <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+            <li class="menu-item menu-item-525 default_menu"><a
                 href="../about/index.html">About/約</a></li>
           </ul>
           <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
