--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -81,16 +81,12 @@
 
         <!-- Place header control before main menu if site title is enabled -->
         <div class="header_controls">
-
-
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
               <i class="fa fa-bars header_control_icon"></i>
             </a>
           </div>
-
         </div>
-
 
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
@@ -127,15 +123,15 @@
       <div class="main_menu">
         <ul id="top-menu" class="navbar">
           <li id="menu-item-585"
-            class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
+            class="menu-item current-menu-item menu-item-585 default_menu active">
             <a href="../index.html">Home/家</a></li>
-          <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-702 default_menu"><a
+          <li class="menu-item menu-item-702 default_menu"><a
               href="../project/index.html">Project/参照</a></li>
-          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+          <li class="menu-item menu-item-523 default_menu"><a
               href="../files/index.html">Files/資料</a></li>
-          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
+          <li class="menu-item menu-item-524 default_menu"><a
               href="../newsroom/index.html">News/便り</a></li>
-          <li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
+          <li class="menu-item menu-item-525 default_menu"><a
               href="../about/index.html">About/約</a></li>
         </ul>
       </div> <!-- end .top_header_items_holder -->
