--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
-    <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='style-css'  href='../theme/style.css' type='text/css' media='all' />
+    <link rel='stylesheet' id='fonts-css'  href='../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
+    <link rel="stylesheet" href="style.css">
+    <link rel='stylesheet' id='custom-css'  href='../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -19,24 +20,22 @@
 <!-- header -->
 
 <header class="site_header">
-  <div class="sticky_header_nav_wrapper header_nav_wrapper header_is_stick">
+  <div class="header_nav_wrapper unsticky_header_nav_wrapper">
     <div class="header_nav">
-
       <div class="navcontainer">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='../../images/flower.png'
-                height='25' width='25' />
-            </a></h1>
+          <h1 class="text_logo">
+            <a href="../index.html" rel="home">STUDIO MILLMINT
+              <img src='../images/flower.png' height='25' width='25' /></a>
+          </h1>
         </div>
-
 
         <!-- Place header control before main menu if site title is enabled -->
         <div class="header_controls">
 
-
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
-              <i class="fa fa-bars header_control_icon"></i>
+              <i class="fa fa-bars header_control_icon"></i><style> {margin-top: 10px;} </style>
             </a>
           </div>
 
@@ -46,22 +45,64 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../../index.html">Home/家</a></li>
-            <li id="menu-item-702"
-              class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
-                href="../../project/index.html">Project/参照</a></li>
-            <li id="menu-item-523"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
+              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
+              <a href="../index.html">Home/家</a></li>
+            <li class="menu-item menu-item-702 default_menu"><a
+                href="../project/index.html">Project/参照</a></li>
+            <li class="menu-item menu-item-523 default_menu"><a
                 href="../files/index.html">Files/資料</a></li>
-            <li id="menu-item-524"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                href="../../newsroom/index.html">News/便り</a></li>
-            <li id="menu-item-525"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../about/index.html">About/約画</a></li>
+            <li class="menu-item menu-item-524 default_menu"><a
+                href="../newsroom/index.html">News/便り</a></li>
+            <li class="menu-item menu-item-525 default_menu"><a
+                href="../about/index.html">About/約</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
+        </div>
+
+        <!-- Place header control after main menu if site title is enabled -->
+
+      </div><!-- end .container -->
+    </div><!-- end .header_nav -->
+  </div><!-- end .header_nav_wrapper -->
+</header>
+
+<header>
+<div id="page" class="site">
+  <div class="sticky_header_nav_wrapper header_nav_wrapper">
+    <div class="header_nav">
+
+      <div class="navcontainer">
+        <div class="site_branding">
+          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='images/flower.png'
+                height='25' width='25' />
+            </a></h1>
+        </div>
+
+
+        <!-- Place header control before main menu if site title is enabled -->
+        <div class="header_controls">
+          <div class="header_sliding_sidebar_control header_control_wrapper">
+            <a id="user_control_icon" class="sliding_sidebar_button" href="#">
+              <i class="fa fa-bars header_control_icon"></i>
+            </a>
+          </div>
+        </div>
+
+        <div class="main_menu">
+          <ul id="top-menu" class="navbar">
+            <li id="menu-item-585"
+              class="menu-item current-menu-item menu-item-585 default_menu active">
+              <a href="../index.html">Home/家</a></li>
+            <li class="menu-item menu-item-702 default_menu"><a
+                href="../project/index.html">Project/参照</a></li>
+            <li class="menu-item menu-item-523 default_menu"><a
+                href="../files/index.html">Files/資料</a></li>
+            <li class="menu-item menu-item-524 default_menu"><a
+                href="../newsroom/index.html">News/便り</a></li>
+            <li class="menu-item menu-item-525 default_menu"><a
+                href="../about/index.html">About/約</a></li>
+          </ul>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -79,34 +120,29 @@
   <h3 class="screen-reader-text">Sliding Sidebar</h3>
     <div class="info_sidebar">
 
-      <div class="top_header_items_holder mobile_menu_opened">
-        <div class="main_menu">
-          <ul id="top-menu" class="navbar">
-            <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom menu-item-585 default_menu">
-              <a href="../../index.html">Home/家</a></li>
-            <li id="menu-item-702"
-              class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item menu-item-702 default_menu active"><a
-                href="../../project/index.html">Project/参照</a></li>
-            <li id="menu-item-523"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-523 default_menu"><a
-                href="../../files/index.html">Files/資料</a></li>
-            <li id="menu-item-524"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-524 default_menu"><a
-                href="../../newsroom/index.html">News|便り</a></li>
-            <li id="menu-item-525"
-              class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-525 default_menu"><a
-                href="../../about/index.html">About/約画</a></li>
-          </ul>
-        </div>
-      </div>
+      <div class="main_menu">
+        <ul id="top-menu" class="navbar">
+          <li id="menu-item-585"
+            class="menu-item current-menu-item menu-item-585 default_menu active">
+            <a href="../index.html">Home/家</a></li>
+          <li class="menu-item menu-item-702 default_menu"><a
+              href="../project/index.html">Project/参照</a></li>
+          <li class="menu-item menu-item-523 default_menu"><a
+              href="../files/index.html">Files/資料</a></li>
+          <li class="menu-item menu-item-524 default_menu"><a
+              href="../newsroom/index.html">News/便り</a></li>
+          <li class="menu-item menu-item-525 default_menu"><a
+              href="../about/index.html">About/約</a></li>
+        </ul>
+      </div> <!-- end .top_header_items_holder -->
 
     </div>
   </div>
+      <!-- end sliding sidebar content -->
 </div>
 
-      <script type='text/javascript' src='../../theme/assets/js/global.js'></script>
-      <script type='text/javascript' src='../../theme/plugins/inc/core.js'></script>
+      <script type='text/javascript' src='../theme/assets/js/global.js'></script>
+      <script type='text/javascript' src='../theme/plugins/inc/core.js'></script>
 
 </body>
 </html>
