--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel='stylesheet' id='style-css'  href='../partials/nav.css' type='text/css' media='all' />
     <link rel='stylesheet' id='style-css'  href='../theme/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css'  href='../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
-    <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' id='custom-css'  href='../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
