--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel='stylesheet' id='style-css'  href='../../partials/nav.css' type='text/css' media='all' />
     <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
     <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
@@ -25,7 +24,7 @@
 
       <div class="navcontainer">
         <div class="site_branding">
-          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='images/flower.png'
+          <h1 class="text_logo"><a href="../../index.html" rel="home">STUDIO MILLMINT <img src='../../images/flower.png'
                 height='25' width='25' />
             </a></h1>
         </div>
@@ -35,7 +34,7 @@
         <div class="header_controls">
           <div class="header_sliding_sidebar_control header_control_wrapper">
             <a id="user_control_icon" class="sliding_sidebar_button" href="#">
-              <i class="fa fa-bars header_control_icon"></i>
+              <i class="fa fa-bars header_control_icon"></i><style> {margin-top: 10px;} </style>
             </a>
           </div>
         </div>
