Fixing project nav menu dot

--- a/partials/nav-home.html
+++ b/partials/nav-home.html
@@ -44,7 +44,7 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item menu-item-585 default_menu active">
+              class="menu-item current-menu-item menu-item-585 default_menu active">
               <a href="../index.html">Home/家</a></li>
             <li class="menu-item menu-item-702 default_menu"><a
                 href="../project/index.html">Project/参照</a></li>
@@ -55,7 +55,7 @@
             <li class="menu-item menu-item-525 default_menu"><a
                 href="../about/index.html">About/約</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
