--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -43,9 +43,9 @@
         <div class="main_menu">
           <ul id="top-menu" class="navbar">
             <li id="menu-item-585"
-              class="menu-item current-menu-item menu-item-585 default_menu active">
+              class="menu-item menu-item-585 default_menu">
               <a href="../../index.html">Home/家</a></li>
-            <li class="menu-item menu-item-702 default_menu"><a
+            <li class="menu-item current-menu-item menu-item-702 default_menu active"><a
                 href="../../project/index.html">Project/参照</a></li>
             <li class="menu-item menu-item-523 default_menu"><a
                 href="../../files/index.html">Files/資料</a></li>
@@ -54,7 +54,7 @@
             <li class="menu-item menu-item-525 default_menu"><a
                 href="../../about/index.html">About/約</a></li>
           </ul>
-          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 41.5px;"></span>
+          <span class="menu_mark_circle mark_circle_loaded" style="display: block; left: 141.40625px;"></span>
         </div>
 
         <!-- Place header control after main menu if site title is enabled -->
@@ -75,9 +75,9 @@
       <div class="main_menu">
         <ul id="top-menu" class="navbar">
           <li id="menu-item-585"
-            class="menu-item current-menu-item menu-item-585 default_menu active">
+            class="menu-item menu-item-585 default_menu">
             <a href="../../index.html">Home/家</a></li>
-          <li class="menu-item menu-item-702 default_menu"><a
+          <li class="menu-item current-menu-item menu-item-702 default_menu active"><a
               href="../../project/index.html">Project/参照</a></li>
           <li class="menu-item menu-item-523 default_menu"><a
               href="../../files/index.html">Files/資料</a></li>
