--- a/partials/nav-project.html
+++ b/partials/nav-project.html
@@ -4,7 +4,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='stylesheet' id='style-css'  href='../../theme/style.css' type='text/css' media='all' />
     <link rel='stylesheet' id='fonts-css'  href='../../theme/assets/fonts/default-google-fonts.css' type='text/css' media='all' />
-    <link rel="stylesheet" href="style.css">
     <link rel='stylesheet' id='custom-css'  href='../../theme/assets/css/custom.css' type='text/css' media='all' />
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -67,11 +66,11 @@
 <!-- end header -->
 
 <!-- start sliding sidebar content -->
+<header class="site_header">
 <div class="sliding_close_helper_overlay"></div>
   <div class="site_side_container">
   <h3 class="screen-reader-text">Sliding Sidebar</h3>
     <div class="info_sidebar">
-
       <div class="main_menu">
         <ul id="top-menu" class="navbar">
           <li id="menu-item-585"
@@ -92,7 +91,7 @@
   </div>
       <!-- end sliding sidebar content -->
 </div>
-
+</header>
       <script type='text/javascript' src='../../theme/assets/js/global.js'></script>
 
 </body>
